{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 23,
  "lineage": "ea8cfbee-4c03-210b-18d2-d122810bee9d",
  "resources": [
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall23-adv-scripting-azure-hsafavi/providers/Microsoft.Network/networkSecurityGroups/HAENE-VM-nsg",
            "location": "eastus",
            "name": "HAENE-VM-nsg",
            "resource_group_name": "fall23-adv-scripting-azure-hsafavi",
            "security_rule": [],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall23-adv-scripting-azure-hsafavi/providers/Microsoft.Network/networkSecurityGroups/HAENE-VM-nsg/securityRules/allow_remote_22_in_all",
            "name": "allow_remote_22_in_all",
            "network_security_group_name": "HAENE-VM-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "fall23-adv-scripting-azure-hsafavi",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "hsafavi1-sample-server",
            "fqdn": "hsafavi1-sample-server.centralus.cloudapp.azure.com",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall23-adv-scripting-azure-hsafavi/providers/Microsoft.Network/publicIPAddresses/HAENE-VM-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "HAENE-VM-pip-0",
            "resource_group_name": "fall23-adv-scripting-azure-hsafavi",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "module.linuxservers.data.azurerm_resource_group.vm"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_count",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_for_each",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall23-adv-scripting-azure-hsafavi/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "fall23-adv-scripting-azure-hsafavi",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ec2b9680-08d1-44f6-b5a1-a2d2ade62919",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall23-adv-scripting-azure-hsafavi/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "eastus",
            "name": "acctvnet",
            "resource_group_name": "fall23-adv-scripting-azure-hsafavi",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall23-adv-scripting-azure-hsafavi/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
                "name": "subnet1"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}